src/LayerMount.dll/public/LayerMount.h


#define LM_CALL __stdcall
typedef struct LM_HANDLE__*              LM_HANDLE;
typedef struct LM_FILE_HANDLE__*         LM_FILE_HANDLE;
typedef enum LM_LAYER_SOURCE {
    LM_LAYER_NONE  = 0,
    LM_LAYER_UPPER = 1,
    LM_LAYER_LOWER = 2
} LM_LAYER_SOURCE;
typedef enum LM_EVENT_TYPE {
    LM_EVT_WARNING           = 0,
    LM_EVT_COPY_UP           = 1,
    LM_EVT_WHITEOUT_CREATED  = 2,
    LM_EVT_ACCESS_DENIED     = 3
} LM_EVENT_TYPE;
typedef struct LM_CONFIG {
    UINT32        structSize;          
    UINT32        abiVersion;          
    UINT32        hostCapabilities;    
    UINT32        accessLogCapacity;   
    UINT32        pathCacheCapacity;   
    BOOL          enableProcessTracking;
    UINT32        lowerPathCount;      
    UINT32        _reserved0;          
    PCWSTR        upperPath;           
    PCWSTR        workDirPath;         
    PCWSTR        processRulesPath;    
    PCWSTR const* lowerPaths;          
} LM_CONFIG;
typedef struct LM_FILE_INFO {
    UINT32 fileAttributes;
    UINT32 reparseTag;
    UINT64 allocationSize;
    UINT64 fileSize;
    UINT64 creationTime;
    UINT64 lastAccessTime;
    UINT64 lastWriteTime;
    UINT64 changeTime;
    UINT64 indexNumber;
    UINT32 hardLinks;
    UINT32 eaSize;
} LM_FILE_INFO;
typedef struct LM_RESOLVED_PATH {
    PWSTR            absolutePath;          
    SIZE_T           absolutePathChars;     
    SIZE_T           absolutePathRequired;  
    LM_LAYER_SOURCE source;
    INT32            lowerIndex;            
    BOOL             isWhiteout;
    UINT32           attributes;            
} LM_RESOLVED_PATH;
typedef struct LM_VOLUME_INFO {
    UINT64 totalSize;
    UINT64 freeSize;
    WCHAR  volumeLabel[32];
    UINT32 volumeLabelLength;
} LM_VOLUME_INFO;
typedef struct LM_EVENT {
    LM_EVENT_TYPE type;
    HRESULT        hr;              
    PCWSTR         relativePath;    
    PCWSTR         message;         
    UINT64         timestamp;       
    DWORD          pid;             
} LM_EVENT;
typedef HRESULT (LM_CALL *LM_DIR_ENUM_CALLBACK)(
    PCWSTR                name,
    const LM_FILE_INFO*  info,
    void*                 userContext);
typedef void (LM_CALL *LM_EVENT_CALLBACK)(
    const LM_EVENT* evt,
    void*            userContext);
LM_API HRESULT LM_CALL LayerMountGetVersion(
    UINT32* major, UINT32* minor, UINT32* patch, UINT32* abiVersion);
LM_API HRESULT LM_CALL LayerMountGetLastErrorMessage(
    HRESULT hr, PWSTR buffer, SIZE_T bufferChars, SIZE_T* requiredChars);
LM_API HRESULT LM_CALL LayerMountCreate(
    const LM_CONFIG* config, LM_HANDLE* outHandle);
LM_API HRESULT LM_CALL LayerMountCreateTransient(
    PCWSTR workDir, UINT32 hostCapabilities, LM_HANDLE* outHandle);
LM_API HRESULT LM_CALL LayerMountDestroy(LM_HANDLE handle);
LM_API HRESULT LM_CALL LayerMountSetEventCallback(
    LM_HANDLE handle, LM_EVENT_CALLBACK callback, void* userContext);
LM_API HRESULT LM_CALL LayerMountSetHostAttached(
    LM_HANDLE handle, BOOL attached);
LM_API HRESULT LM_CALL LayerMountHResultToNtStatus(
    HRESULT hr, NTSTATUS* outStatus);
LM_API HRESULT LM_CALL LayerMountResolvePath(
    LM_HANDLE handle, PCWSTR relativePath, LM_RESOLVED_PATH* outResolved);
LM_API HRESULT LM_CALL LayerMountGetVolumeInfo(
    LM_HANDLE handle, LM_VOLUME_INFO* outInfo);
LM_API HRESULT LM_CALL LayerMountEnsureInUpperLayer(
    LM_HANDLE handle, PCWSTR relativePath);
LM_API HRESULT LM_CALL LayerMountOpenFile(
    LM_HANDLE       handle,
    PCWSTR           relativePath,
    UINT32           grantedAccess,
    UINT32           createOptions,
    DWORD            originatorPid,        
    LM_FILE_HANDLE* outFile,
    LM_FILE_INFO*   outInfo);
LM_API HRESULT LM_CALL LayerMountCreateFile(
    LM_HANDLE       handle,
    PCWSTR           relativePath,
    UINT32           createOptions,
    UINT32           grantedAccess,
    UINT32           fileAttributes,
    const BYTE*      securityDescriptor,   
    SIZE_T           securityDescriptorBytes,
    UINT64           allocationSize,
    DWORD            originatorPid,        
    LM_FILE_HANDLE* outFile,
    LM_FILE_INFO*   outInfo);
LM_API HRESULT LM_CALL LayerMountCloseFile(LM_FILE_HANDLE file);
LM_API HRESULT LM_CALL LayerMountReadFile(
    LM_FILE_HANDLE file,
    void*           buffer,
    UINT64          offset,
    UINT32          length,
    DWORD           originatorPid,         
    UINT32*         bytesTransferred);
LM_API HRESULT LM_CALL LayerMountWriteFile(
    LM_FILE_HANDLE file,
    const void*     buffer,
    UINT64          offset,
    UINT32          length,
    BOOL            writeToEnd,
    BOOL            constrainedIo,
    DWORD           originatorPid,         
    UINT32*         bytesTransferred,
    LM_FILE_INFO*  outInfo);
LM_API HRESULT LM_CALL LayerMountOverwriteFile(
    LM_FILE_HANDLE file,
    UINT32          fileAttributes,
    BOOL            replaceAttributes,
    UINT64          allocationSize,
    DWORD           originatorPid,         
    LM_FILE_INFO*  outInfo);
LM_API HRESULT LM_CALL LayerMountFlushFile(
    LM_FILE_HANDLE file,
    DWORD           originatorPid,         
    LM_FILE_INFO*  outInfo);
LM_API HRESULT LM_CALL LayerMountGetFileInfo(
    LM_FILE_HANDLE file, LM_FILE_INFO* outInfo);
LM_API HRESULT LM_CALL LayerMountSetFileInfo(
    LM_FILE_HANDLE file,
    UINT32          fileAttributes,      
    UINT64          creationTime,        
    UINT64          lastAccessTime,
    UINT64          lastWriteTime,
    UINT64          changeTime,
    UINT64          allocationSize,      
    UINT64          fileSize,
    LM_FILE_INFO*  outInfo);
LM_API HRESULT LM_CALL LayerMountDeleteFile(
    LM_HANDLE handle, PCWSTR relativePath);
LM_API HRESULT LM_CALL LayerMountCanDeleteFile(
    LM_HANDLE handle, PCWSTR relativePath);
LM_API HRESULT LM_CALL LayerMountCanDeleteOpenFile(
    LM_FILE_HANDLE file);
LM_API HRESULT LM_CALL LayerMountDeleteOpenFile(
    LM_FILE_HANDLE file);
LM_API HRESULT LM_CALL LayerMountRenameFile(
    LM_HANDLE handle,
    PCWSTR     oldRelativePath,
    PCWSTR     newRelativePath,
    BOOL       replaceIfExists);
LM_API HRESULT LM_CALL LayerMountRenameOpenFile(
    LM_FILE_HANDLE file,
    PCWSTR          newRelativePath,
    BOOL            replaceIfExists);
LM_API HRESULT LM_CALL LayerMountUpdateOpenFilePath(
    LM_FILE_HANDLE file,
    PCWSTR          newRelativePath);
LM_API HRESULT LM_CALL LayerMountGetSecurity(
    LM_HANDLE handle,
    PCWSTR     relativePath,
    UINT32*    outFileAttributes,
    BYTE*      securityDescriptor,
    SIZE_T     securityDescriptorBytes,
    SIZE_T*    requiredBytes);
LM_API HRESULT LM_CALL LayerMountSetSecurity(
    LM_HANDLE  handle,
    PCWSTR      relativePath,
    UINT32      securityInformation,
    const BYTE* modificationDescriptor,
    SIZE_T      modificationDescriptorBytes);
LM_API HRESULT LM_CALL LayerMountMergeDirectory(
    LM_HANDLE             handle,
    PCWSTR                 dirRelativePath,
    LM_DIR_ENUM_CALLBACK  callback,
    void*                  userContext);
LM_API HRESULT LM_CALL LayerMountCreateWhiteout(
    LM_HANDLE handle, PCWSTR relativePath, BOOL isDirectory);
LM_API HRESULT LM_CALL LayerMountSetOpaque(
    LM_HANDLE handle, PCWSTR dirRelativePath);
LM_API HRESULT LM_CALL LayerMountGetReparsePoint(
    LM_HANDLE handle,
    PCWSTR     relativePath,
    BYTE*      buffer,
    SIZE_T     bufferBytes,
    SIZE_T*    requiredBytes);
LM_API HRESULT LM_CALL LayerMountSetReparsePoint(
    LM_HANDLE  handle,
    PCWSTR      relativePath,
    const BYTE* buffer,
    SIZE_T      bufferBytes);
LM_API HRESULT LM_CALL LayerMountDeleteReparsePoint(
    LM_HANDLE  handle,
    PCWSTR      relativePath,
    const BYTE* buffer,
    SIZE_T      bufferBytes);