src/LayerMount.NET/Interop/NativeMethods.cs

// P/Invoke declarations for LayerMount.dll.
//
// Every entry mirrors a prototype in src/LayerMount.dll/public/LayerMount.h and
// a symbol in public/LayerMount.def. Declared with [LibraryImport] so the
// marshalling code is source-generated at compile time (AOT / trim
// safe). Calling convention is __stdcall (LM_CALL), applied via
// [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])].
//
// Convention:
//   - Handles are raw IntPtr; the managed SafeHandle layer sits above.
//   - PCWSTR input params are `string` (marshalled UTF-16, caller-owned
//     temp pinning handled by the source generator).
//   - PWSTR output buffers are `char*` + `nuint` capacity + `nuint*`
//     required, reflecting the two-call pattern.
//   - BYTE* buffers are `byte*` (raw).
//   - BOOL is `int` (0/1) for struct-field-equivalent blittability.
//   - SIZE_T is `nuint`.
//   - Callbacks are `delegate* unmanaged[Stdcall]<...>` function pointers
//     (AOT-safe; no marshal.GetFunctionPointerForDelegate calls).
//
// All methods in this file are internal.

using System;
using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;

namespace LayerMount.Interop;

internal static unsafe partial class NativeMethods
{
    internal const string DllName = "LayerMount.dll";

    // --------------------------------------------------------------------
    // Lifecycle / diagnostics-lite
    // --------------------------------------------------------------------

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountGetVersion(
        uint* major, uint* minor, uint* patch, uint* abiVersion);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountGetLastErrorMessage(
        int hr, char* buffer, nuint bufferChars, nuint* requiredChars);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountCreate(
        LM_CONFIG* config, IntPtr* outHandle);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountCreateTransient(
        string workDir, uint hostCapabilities, IntPtr* outHandle);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountDestroy(IntPtr handle);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountHResultToNtStatus(int hr, int* outStatus);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountSetEventCallback(
        IntPtr handle,
        delegate* unmanaged[Stdcall]<LM_EVENT*, void*, void> callback,
        void* userContext);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountSetHostAttached(
        IntPtr handle, int attached);

    // --------------------------------------------------------------------
    // Path / volume
    // --------------------------------------------------------------------

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountResolvePath(
        IntPtr handle, string relativePath, LM_RESOLVED_PATH* outResolved);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountGetVolumeInfo(
        IntPtr handle, LM_VOLUME_INFO* outInfo);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountEnsureInUpperLayer(
        IntPtr handle, string relativePath);

    // --------------------------------------------------------------------
    // File primitives
    // --------------------------------------------------------------------

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountOpenFile(
        IntPtr         handle,
        string         relativePath,
        uint           grantedAccess,
        uint           createOptions,
        uint           originatorPid,
        IntPtr*        outFile,
        LM_FILE_INFO* outInfo);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountCreateFile(
        IntPtr         handle,
        string         relativePath,
        uint           createOptions,
        uint           grantedAccess,
        uint           fileAttributes,
        byte*          securityDescriptor,
        nuint          securityDescriptorBytes,
        ulong          allocationSize,
        uint           originatorPid,
        IntPtr*        outFile,
        LM_FILE_INFO* outInfo);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountCloseFile(IntPtr file);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountReadFile(
        IntPtr file,
        void*  buffer,
        ulong  offset,
        uint   length,
        uint   originatorPid,
        uint*  bytesTransferred);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountWriteFile(
        IntPtr         file,
        void*          buffer,
        ulong          offset,
        uint           length,
        int            writeToEnd,
        int            constrainedIo,
        uint           originatorPid,
        uint*          bytesTransferred,
        LM_FILE_INFO* outInfo);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountOverwriteFile(
        IntPtr         file,
        uint           fileAttributes,
        int            replaceAttributes,
        ulong          allocationSize,
        uint           originatorPid,
        LM_FILE_INFO* outInfo);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountFlushFile(
        IntPtr         file,
        uint           originatorPid,
        LM_FILE_INFO* outInfo);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountGetFileInfo(
        IntPtr file, LM_FILE_INFO* outInfo);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountSetFileInfo(
        IntPtr         file,
        uint           fileAttributes,
        ulong          creationTime,
        ulong          lastAccessTime,
        ulong          lastWriteTime,
        ulong          changeTime,
        ulong          allocationSize,
        ulong          fileSize,
        LM_FILE_INFO* outInfo);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountDeleteFile(
        IntPtr handle, string relativePath);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountCanDeleteFile(
        IntPtr handle, string relativePath);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountCanDeleteOpenFile(IntPtr file);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountDeleteOpenFile(IntPtr file);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountRenameFile(
        IntPtr handle,
        string oldRelativePath,
        string newRelativePath,
        int    replaceIfExists);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountRenameOpenFile(
        IntPtr file,
        string newRelativePath,
        int    replaceIfExists);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountUpdateOpenFilePath(
        IntPtr file,
        string newRelativePath);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountGetSecurity(
        IntPtr handle,
        string relativePath,
        uint*  outFileAttributes,
        byte*  securityDescriptor,
        nuint  securityDescriptorBytes,
        nuint* requiredBytes);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountSetSecurity(
        IntPtr handle,
        string relativePath,
        uint   securityInformation,
        byte*  modificationDescriptor,
        nuint  modificationDescriptorBytes);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountMergeDirectory(
        IntPtr handle,
        string dirRelativePath,
        delegate* unmanaged[Stdcall]<char*, LM_FILE_INFO*, void*, int> callback,
        void*  userContext);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountCreateWhiteout(
        IntPtr handle, string relativePath, int isDirectory);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountSetOpaque(
        IntPtr handle, string dirRelativePath);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountGetReparsePoint(
        IntPtr handle,
        string relativePath,
        byte*  buffer,
        nuint  bufferBytes,
        nuint* requiredBytes);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountSetReparsePoint(
        IntPtr handle,
        string relativePath,
        byte*  buffer,
        nuint  bufferBytes);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountDeleteReparsePoint(
        IntPtr handle,
        string relativePath,
        byte*  buffer,
        nuint  bufferBytes);
